--- a/.github/workflows/sonarscan.yaml
+++ b/.github/workflows/sonarscan.yaml
@@ -16,7 +16,7 @@ jobs:
       run: sudo apt-get install php-cli unzip
 
     - name: Install Composer dependencies
-      run: composer install
+      run: cd demo-php && composer install
 
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
@@ -24,7 +24,7 @@ jobs:
         projectBaseDir: .
         args: >
           -Dsonar.organization=my-org
-          -Dsonar.projectKey=my-php-app
+          -Dsonar.projectKey=my-demo-php
           -Dsonar.exclusions=vendor/**,node_modules/**,tests/**
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
