--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-org/demo-php",
+  "name": "Dummypiece/demo-php",
   "description": "A PHP project",
   "require": {
     "php": ">=8.0"
