--- a/.github/workflows/sonarscan.yaml
+++ b/.github/workflows/sonarscan.yaml
@@ -5,23 +5,39 @@ on:
     branches:
       - main
 
-
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
     
     steps:
-      - uses: actions/checkout@v4
+      # ✅ Step 1: Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: SonarSource/sonarqube-scan-action@v4
+          fetch-depth: 0  # Shallow clones should be disabled for better analysis
+
+      # ✅ Step 2: Check SonarQube server connection
+      - name: Check SonarQube Server Connection
+        shell: bash
+        run: |
+          echo "Checking connection to SonarQube server..."
+          curl -I --connect-timeout 30 ${{ secrets.SONAR_HOST_URL }} || exit 1
+
+      # ✅ Step 3: Run SonarQube scan
+      - name: Run SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: SonarSource/sonarqube-quality-gate-action@v1
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.scanner.socketTimeout=60000
+            -X
+
+      # ✅ Step 4: Check SonarQube Quality Gate
+      - name: Check SonarQube Quality Gate
+        uses: SonarSource/sonarqube-quality-gate-action@v1
+        timeout-minutes: 10
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
