--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,16 @@
 sonar.projectKey=demo-php
+# Project identification
+sonar.projectKey=my-org_demo-php
+sonar.projectName=Demo PHP Project
+sonar.projectVersion=1.0
+
+# Source settings
+sonar.sources=./demo-php
+
+# PHP settings
+sonar.language=php
+sonar.sourceEncoding=UTF-8
+
+# SonarQube server settings
+sonar.host.url=http://localhost:9000
+sonar.login=${SONAR_TOKEN}
