--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,12 @@
-sonar.projectKey=demo-php
 # Project identification
-sonar.projectKey=my-org_demo-php
+sonar.projectKey=my-org-demo-php
 sonar.projectName=Demo PHP Project
 sonar.projectVersion=1.0
 
-# Source settings
-sonar.sources=./demo-php
-
-# PHP settings
+# Project sources
+sonar.sources=demo-php
 sonar.language=php
-sonar.sourceEncoding=UTF-8
 
-# SonarQube server settings
+# Host URL and authentication
 sonar.host.url=http://localhost:9000
-sonar.login=${SONAR_TOKEN}
+sonar.login=<YOUR_SONAR_TOKEN>
