--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
-    "name": "my-org/demo-php",
-    "description": "A PHP project",
-    "require": {
-        "php": ">=8.0"
-    }
+  "name": "my-org/demo-php",
+  "description": "A PHP project",
+  "require": {
+    "php": ">=8.0"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "php artisan config:cache"
+    ]
+  }
 }
