--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,28 @@
 version: '3.8'
 
 services:
-  php-app:
-    container_name: php-app
-    build:
-      context: .
-      dockerfile: Dockerfile
+  php:
+    build: .
     ports:
       - "8080:80"
     volumes:
-      - ./demo-php:/var/www/html
+      - .:/var/www/html
+
+  sonarqube:
+    image: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
     depends_on:
       - db
 
   db:
-    container_name: mysql-db
-    image: mysql:5.7
-    restart: always
+    image: postgres
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: demo
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-
-volumes:
-  mysql_data:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+      - POSTGRES_DB=sonarqube
