--- a/.github/workflows/sonarscan.yaml
+++ b/.github/workflows/sonarscan.yaml
@@ -20,25 +20,8 @@ jobs:
       - name: Start SonarQube Docker container
         run: |
           docker run -d --name sonarqube -p 9000:9000 sonarqube
-          sleep 30 # Wait for SonarQube to start
+          sleep 60 # Increased to give SonarQube more time to initialize
 
       - name: Wait for SonarQube to be ready
         run: |
-          until $(curl --output /dev/null --silent --head --fail http://localhost:9000); do
-            printf '.'
-            sleep 5
-          done
-          echo "SonarQube is ready"
-
-      - name: Run SonarQube scanner
-        run: |
-          docker run --rm \
-            -e SONAR_HOST_URL="http://localhost:9000" \
-            -e SONAR_LOGIN="<YOUR_SONAR_TOKEN>" \
-            -v "$PWD:/usr/src" \
-            sonarsource/sonar-scanner-cli
-
-      - name: Stop SonarQube container
-        run: |
-          docker stop sonarqube
-          docker rm sonarqube
+          echo
