--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,13 @@
-
-# Project identification
-sonar.projectKey=my-org-demo-php
-sonar.projectName=Demo PHP Project
+# Unique key for the project (create one in SonarQube)
+sonar.projectKey=my-project-key
+sonar.projectName=My Project
 sonar.projectVersion=1.0
 
-# Project sources
-sonar.sources=demo-php
-sonar.language=php
+# Source directory (update the path as needed)
+sonar.sources=.
 
-# Host URL and authentication
-sonar.host.url=http://localhost:9000
-sonar.login=<YOUR_SONAR_TOKEN>
+# SonarQube server URL
+sonar.host.url=http://localhost:9001
 
-sonar.projectKey=demo-php
-# Binding IP and port
-sonar.web.host=0.0.0.0
-sonar.web.port=9000
-
+# Authentication token
+sonar.token=sqp_44ff45a06b65f03b4d77647857006c0550db46ab
