--- a/.github/workflows/sonarscan.yaml
+++ b/.github/workflows/sonarscan.yaml
@@ -17,14 +17,29 @@ jobs:
         run: |
           docker --version
 
+      - name: Start SonarQube
+        run: |
+          docker run -d --name sonarqube \
+            -p 9001:9000 \
+            -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true \
+            -e SONAR_JAVA_OPTS="-Xmx2g -Xms2g" \
+            sonarqube:lts
+
       - name: Wait for SonarQube to be ready
         run: |
           echo "Waiting for SonarQube to start..."
-          until $(curl --output /dev/null --silent --head --fail http://localhost:9001); do
-            printf '.'
+          timeout=300
+          until curl -s -o /dev/null -w "%{http_code}" http://localhost:9001 | grep 200; do
+            echo "SonarQube is not ready yet..."
             sleep 5
+            ((timeout--))
+            if [ $timeout -le 0 ]; then
+              echo "❌ SonarQube failed to start within the timeout."
+              docker logs sonarqube
+              exit 1
+            fi
           done
-          echo "SonarQube is ready"
+          echo "✅ SonarQube is ready"
 
       - name: Run SonarQube scanner
         run: |
@@ -33,3 +48,8 @@ jobs:
             -e SONAR_LOGIN="${{ secrets.SONAR_TOKEN }}" \
             -v "$PWD:/usr/src" \
             sonarsource/sonar-scanner-cli
+
+      - name: Stop SonarQube
+        run: |
+          docker stop sonarqube
+          docker rm sonarqube
