--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   sonarqube:
     image: sonarqube
     ports:
-      - "9000:9000" # Fixed indentation
+      - "9000:9000" # Changed to 9000 for consistency
     environment:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
       - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
@@ -25,4 +25,4 @@ services:
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
-      - POSTGRES_DB=sonarqube
+      - POSTGRES_DB=sonarqube # ✅ Removed incorrect period
