--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   php:
     build: .
@@ -11,7 +9,7 @@ services:
   sonarqube:
     image: sonarqube
     ports:
-      - "9000:9000" # Fixed indentation
+      - "9000:9000" # Changed to 9000 for consistency
     environment:
       - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
       - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
